[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/muzzleflashlight.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Explosion.gd" type="Script" id=2]
[ext_resource path="res://Sounds/explosion.wav" type="AudioStream" id=3]

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0.0248447, 1 )
colors = PoolColorArray( 0.947021, 0.279745, 0.0443916, 1, 0.847059, 0.847059, 0.847059, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=16]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 1.0
damping_random = 1.0
scale = 10.0
scale_random = 1.0
color_ramp = SubResource( 13 )

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0.00621118, 0.161491, 1 )
colors = PoolColorArray( 1, 0.117188, 0, 1, 0.519531, 0.519531, 0.519531, 1, 0.333333, 0.333333, 0.333333, 0.67451 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 17 )

[sub_resource type="ParticlesMaterial" id=18]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 42.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 10.0
scale_random = 1.0
color = Color( 0.411765, 0.364706, 0.364706, 1 )
color_ramp = SubResource( 14 )

[node name="Explosion" type="Particles2D"]
emitting = false
amount = 500
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 16 )
script = ExtResource( 2 )

[node name="ExplosionDebris" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 5.0
one_shot = true
explosiveness = 0.99
local_coords = false
process_material = SubResource( 18 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 1 )
texture_scale = 6.0
color = Color( 1, 0.235294, 0, 1 )
energy = 2.0
shadow_enabled = true

[node name="Timer" type="Timer" parent="Light2D"]
wait_time = 0.1
one_shot = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0
autoplay = true
max_distance = 5000.0
bus = "SFX"

[connection signal="timeout" from="Light2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
